<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/week_btn"
        style="@style/green_button_style"
        android:layout_margin="5dip"
        android:onClick="onClick"
        android:text="@string/main_menu_tasks" />

    <Button
        android:id="@+id/current_task_btn"
        style="@style/green_button_style"
        android:layout_margin="5dip"
        android:onClick="onClick"
        android:text="@string/my_current_tasks" />

    <Button
        android:id="@+id/bChekingKnowledge"
        style="@style/green_button_style"
        android:layout_margin="5dip"
        android:onClick="onClick"
        android:text="@string/main_menu_cheking_knowledge" />

    <Button
        android:id="@+id/statistic_btn"
        style="@style/green_button_style"
        android:layout_margin="5dip"
        android:onClick="onClick"
        android:text="@string/main_menu_statistic" />

</LinearLayout>