<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="@string/select_dictionary" />

    <Spinner
        android:id="@+id/sDictionary"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="@string/select_period" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/period_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/set_period_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_set_period"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@+id/statistic_no_words"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Statistic:" />

    <ExpandableListView
        android:id="@+id/elvCheckingKnowladge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:groupIndicator="@android:color/transparent"
        android:padding="3dip" >
    </ExpandableListView>

    <ListView
        android:id="@+id/statistic_list_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
    
        android:padding="3dip" >
    </ListView>

</LinearLayout>